EXST/CONFIG/BE/API: Rinominato e reso OPZIONALE il campo "logical_operator" che ora diventa "conditions_logical_operator"
